Ingress/testroom/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fitverse.com
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: hello-world.pvt
      http:
        paths:
          - path: /members/service
            pathType: Prefix
            backend:
              service:
                name: hello-app-service
                port:
                  number: 8080
